--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ Complex bend combinations have also been considered, such as the 2016 foldable d
             </div>
             <div class="col-lg-5 pl-15 md-pl-15 mt-150">
                 <div class="sec-title mb-36">
-                    <h2 class="title bg-left">Résumé</h2>
-                    <p id="texte_resume">L'article résumé apparaitra ici.</p>
+                    <h2 class="title bg-left" style="color:white">Résumé</h2>
+                    <p id="texte_resume" style="color:white">L'article résumé apparaitra ici.</p>
                     <p class="margin-0"></p>
                 </div>
             </div>
