--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       gtag('config', 'G-YN6M35H2NL');
     </script>
     
+    <!-- animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="images/fav.png">
     <!-- bootstrap v4 css -->
@@ -32,6 +34,8 @@
     <link rel="stylesheet" type="text/css" href="css/spacing.css">
     <!-- responsive css -->
     <link rel="stylesheet" type="text/css" href="css/responsive.css">
+    <!-- bars css -->
+    <link rel="stylesheet" type="text/css" href="css/bars.css">
 </head>
 
 <body>
@@ -84,29 +88,16 @@
     <!-- Slider Section Start Here -->
 
     <div class="rs-main-slider">
-        <div class='row' style="margin-top: 8%;">
+        <div class='row' style="margin-top: 12%;">
         </div>
-        <div class="row" style="height:100%;">
-            <div class="row" style="width:90%; margin-left: 5%; height:100%;">
-                <style>
-                    iframe {
-                        width: 100%;
-                        height: 400px;
-                        border-radius: 10px;
-                        
-                        background: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100% 100%"><text fill="white" x="50%" y="50%" font-family="\'Lucida Grande\', sans-serif" font-size="24" text-anchor="middle">Loading...</text></svg>') 0px 0px no-repeat;
-                    }
-                </style>
-                <iframe frameBorder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS9cHPFFBXcl7-EMLhfEOprL-cPOXwjQmbYRqV4Rew30kv0Osxz5b1jBga7Yjd96SvocrxLuP-8_awz/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false&amp;chrome=false&amp;range=Sheet1!A1:HH"></iframe>
-            </div> 
-        </div>
+
         <div class="row">
-            <div class="neuron-contact col-lg-6 pl-30">
-                <div class="contact-form pt-20 md-pt-20 pb-20" style="margin-left: 6.5%;">
+            <div class="neuron-contact" style="flex: 1; padding: 0% 2.5% 2% 5%">
+                <div class="contact-form">
                     <form id="text-form">
-                        <h4 style="margin-bottom: 5px; color:white;"> Que voulez-vous savoir sur ces données:</h4>
+                        <h4 style="margin-bottom: 5px; color:white;"> Indiquez le sujet des tweets que vous voulez analyser:</h4>
                         <div class="form-field" >
-                            <input style="margin-bottom: 2%;" type="text" placeholder="Requête" id="entry" name="entry" required="" value="La moyenne des investissements en juin 2017 en Fintech.">
+                            <input style="margin-bottom: 2%;" type="text" placeholder="OVHCloud, Ubisoft, NetflixWalkout, ..." id="entry" name="entry" required="" value="@joinstationf">
                         </div>
                         <div class="form-button">
                             <button id="entry_button" type="button" onclick="get_sheet_request()">ENVOYER !</button>
@@ -114,26 +105,73 @@
                     </form>
                 </div>
             </div>
-            <div class="col-lg-5 pl-20 md-pl-20 mt-20">
-                <div class="sec-title mb-36">
-                    <h4 style="color:white">Réponse de la requête:</h4>
-                    <p id="texte_requete" style="color:white; text-align:center">La réponse apparaitra ici.</p>
-                    <p class="margin-0"></p>
+            <div style="flex: 1; padding: 0% 5% 0% 2.5%">
+                <div id="bars" class="skill-bars animate__animated animate__slideInDown" hidden>
+                    <div class="bar">
+                        <div class="info">
+                            <span>Positif</span>
+                        </div>
+                        <div class="progress-line positive">
+                            <span id='span-pos'></span>
+                        </div>
+                    </div>
+                    <div class="bar">
+                        <div class="info">
+                            <span>Neutre</span>
+                        </div>
+                        <div class="progress-line neutral">
+                            <span id='span-neu'></span>
+                        </div>
+                    </div>
+                    <div class="bar">
+                        <div class="info">
+                            <span>Négatif</span>
+                        </div>
+                        <div class="progress-line negative">
+                            <span id='span-neg'></span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row" style="width:80%; margin-left: 10%;">
-            <div class="pl-20 md-pl-20 mt-20">
-                <h4 style="color:white">Exemples de requêtes:</h4>
-                <p style="color:white; text-align:left">
-Le nombre d'investissement de décembre 2019 en biotech/health en round A. <br>
-La moyenne des investissements le 18 décembre 2019 en Fintech en série B.<br>
-Le mois où la moyenne des investissements est maximale.<br>
-La catégorie de la moyenne maximale des investissements en série B.<br>
-La catégorie du nombre maximal de série A.<br>
-L'année où le nombre d'investissement est minimal.<br>
-La catégorie où la moyenne des investissements est maximale à San Francisco.<br>
-</p>
+        <div class="row" id='loading_row' style='padding: 2% 0%;' hidden>
+            <div style="flex: 1; padding: 0% 2.5%"></div>
+            <div id="load-bar" class="skill-bars animate__animated animate__slideInUp" style="flex: 8; padding: 2% 2.5%">
+                <div class="bar">
+                    <div class="info" style="text-align: center;">
+                        <span>Chargement</span>
+                    </div>
+                    <div class="progress-line loading">
+                        <span id='span-load'></span>
+                    </div>
+                </div>
+            </div>
+            <div style="flex: 1; padding: 0% 2.5%"></div>
+        </div>
+        <div class='row' id='per_row' style="margin-top: 5%;" hidden>
+            <div style="flex: 1; padding: 0% 2.5% 0% 5%">
+                <div id="card-positif" class='card animate__animated animate__slideInLeft' hidden>
+                    <h4> Tweet le plus positif</h4>
+                    <p id='text-positif'> CECI EST UN TWEET SI POSITIIIIIIIIIF. J'ADORE LA VIEEEEEEEEEEEEEEEEEEEEEE.</p>
+                </div>
+            </div>
+            <div style="flex: 1; padding: 0% 5% 0% 2.5%">
+                <div id="card-negatif" class='card animate__animated animate__slideInRight' hidden>
+                    <h4> Tweet le plus négatif</h4>
+                    <p id='text-negatif'> CECI EST UN TWEET SI NEGATIF. JE DETESTE LA VIEEEEEEEEEEEEEEEEEEEEEE.</p>
+                </div>
+            </div>
+        </div>
+        <div class='row' style="margin-bottom: 20%; margin-top: 5%;" >
+            <div style="flex: 1; padding: 0% 2.5% 0% 5%">
+                <div id="card-number" class='card animate__animated animate__slideInLeft' hidden>
+                    <h5> Nombre de tweets analysés:</h5>
+                    <h3 id='text-number' style='text-align: center;'> </h3>
+                </div>
+            </div>
+            <div style="flex: 1; padding: 0% 5% 0% 2.5%">
+                <div id="card-empty" class='card animate__animated animate__slideInRight' hidden>
+                </div>
             </div>
         </div>
     </div>
@@ -141,11 +179,11 @@ La catégorie où la moyenne des investissements est maximale à San Francisco.<
 
     <!-- Footer Start -->
     <footer id="rs-footer" class="rs-footer">
-        <div class="footer-top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 col-md-12 col-sm-12 single-footer-column mb-md-10">
-                        <div class="about-widget pr-20">
+        <div class="footer-top" style="height: 100%;">
+            <div class="container" style="height: 100%;">
+                <div class="row" style="height: 100%;">
+                    <div class="col-lg-3 col-md-12 col-sm-12 single-footer-column mb-md-10" style="height: 100%;">
+                        <div class="about-widget pr-20" style="height: 100%;">
                             <ul class="social-links">
                                 <li><a href="https://www.linkedin.com/company/bazal/"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
